--- a/index.html
+++ b/index.html
@@ -3,9 +3,96 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="styles/style.css">
+    <title>Bangladesh 2.0</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <ul>
+                <li class="nav">
+                    <p>Bangladesh 2.0</p>
+                    <button class="nav-btn">Sign In</button>
+                </li>
+            </ul>
+        </nav>
+        <div class="banner-section">
+            <div class="banner">
+                <h4 class="font-02">Bangladesh 2.0</h4>
+                <h1 class="font-01">Idea , innovation ,<br>vision and challenges in<br>New Bangladesh.</h1>
+                <button class="btn">Explore New Bangladesh</button>
+            </div>
+            <img src="assets/hero.png" alt="">
+        </div>
+    </header>
+
+    <main>
+        <div class="the-vision-of-future">
+            <p class="p1">The Vision of Future</p>
+            <p class="p2">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
+            <div class="card">
+                    <div class="card-01">
+                    <img class="card-img card-img1" src="./assets/card-icon.png" alt="">
+                    <h3 class="card-title">Digital Transformation</h3>
+                    <p class="card-subtitle">Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.</p>
+                    <button class="card-btn card-btn-01">Learn More</button>
+                </div>
+                <div class="card-02">
+                    <img class="card-img card-img2" src="./assets/card-icon.png" alt="">
+                    <h3 class="card-title">Green Energy</h3>
+                    <p class="card-subtitle">Investments in solar and wind energy to ensure a sustainable and eco-friendly future.</p>
+                    <button class="card-btn card-btn-02">Learn More</button>
+                </div>
+                <div class="card-03">
+                    <img class="card-img card-img3" src="./assets/card-icon.png" alt="">
+                    <h3 class="card-title">Modern Infrastructure</h3>
+                    <p class="card-subtitle">Building state-of-the-art infrastructure to support economic growth and global competitiveness.</p>
+                    <button class="card-btn card-btn-03">Learn More</button>
+                </div>
+            </div>
+        </div>
+        <!-- recent-news -->
+        <div class="recent-news">
+            <h4 class="recent-news-title">Recent News</h4>
+            <p class="recent-news-subtitle">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
+            <div class="content">
+                <img class="satelite-img" src="./assets/satelite.png" alt="">
+                <div class="content-items">
+                    <h4 class="content-items-title">Bangladesh Launches New Satellite</h4>
+                    <img class="al-jazeera-img" src="./assets/al-jazeera.png" alt="">
+                    <p class="date-time">Date: 05/01/2025 <span class="date-time-gap"></span>Time: 10.25 PM</p>
+                    <p class="content-items-subtitle">Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
+                        with a certain degree of justification, be able to speak of humankind as civilized</p>
+                    <button class="read-more-btn">Read More</button>
+                </div>
+            </div>
+        <div class="content">
+            <div class="content-items">
+                <h4 class="content-items-title">Bangladesh Launches New Satellite</h4>
+                <img class="al-jazeera-img" src="./assets/al-jazeera.png" alt="">
+                <p class="date-time">Date: 05/01/2025 <span class="date-time-gap"></span>Time: 10.25 PM</p>
+                <p class="content-items-subtitle">Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
+                    with a certain degree of justification, be able to speak of humankind as civilized</p>
+                <button class="read-more-btn">Read More</button>
+            </div>
+                <img class="satelite-img" src="./assets/satelite.png" alt="">
+        </div>
+    </main>
+
+    <!-- donate-today -->
+    <section class="donate-today">
+        <h3 class="recent-news-title donate-alignment">Donate Today</h3>
+        <p class="recent-news-subtitle donate-alignment">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability.<br>With initiatives in renewable energy, digital transformation, and robust infrastructure.</p>
+            <div class="money">
+                <div class="100tk">100 Tk</div>
+                <div class="200tk">200 Tk</div>
+                <div class="500tk">500 Tk</div>
+                <div class="1000tk">1000 Tk</div>
+            </div>
+    </section>
+
+    <footer>
+
+    </footer>
 </body>
 </html>
