--- a/index.html
+++ b/index.html
@@ -83,16 +83,25 @@
     <section class="donate-today">
         <h3 class="recent-news-title donate-alignment">Donate Today</h3>
         <p class="recent-news-subtitle donate-alignment">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability.<br>With initiatives in renewable energy, digital transformation, and robust infrastructure.</p>
-            <div class="money">
-                <div class="100tk">100 Tk</div>
-                <div class="200tk">200 Tk</div>
-                <div class="500tk">500 Tk</div>
-                <div class="1000tk">1000 Tk</div>
+            <div class="money-section">
+                <div class="money money-background">100 Tk</div>
+                <div class="money money-background2">200 Tk</div>
+                <div class="money money-background">500 Tk</div>
+                <div class="money money-background">1000 Tk</div>
+            </div>
+            <div class="other-amount-section">
+                <input class="other-amount" type="text" name="" id="" placeholder="Other Amount (Taka)">
+                <button class="read-more-btn btn-align">Done Now</button>
             </div>
     </section>
-
-    <footer>
-
+    <footer class="footer">
+        <h1 class="recent-news-title donate-alignment">Subscribe Newsletter</h1>
+        <p class="recent-news-subtitle donate-alignment">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge<br>technology, promoting inclusive growth.</p>
+        <div class="input-email">
+            <input class="input-email-form" type="email" name="email" id="email" placeholder="Enter your email here">
+            <button class="input-email-btn">Subscribe</button>
+        </div>
+        <p class="recent-news-subtitle alignment-1">We promise not to spam you!</p>
     </footer>
 </body>
 </html>
