--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
         </div>
         <!-- recent-news -->
         <div class="recent-news">
-            <h4 class="recent-news-title">Recent News</h4>
-            <p class="recent-news-subtitle">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
+            <h4 class="title">Recent News</h4>
+            <p class="subtitle">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
             <div class="content">
                 <img class="satelite-img" src="./assets/satelite.png" alt="">
                 <div class="content-items">
@@ -63,7 +63,7 @@
                     <p class="date-time">Date: 05/01/2025 <span class="date-time-gap"></span>Time: 10.25 PM</p>
                     <p class="content-items-subtitle">Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
                         with a certain degree of justification, be able to speak of humankind as civilized</p>
-                    <button class="read-more-btn">Read More</button>
+                    <button class="btn">Read More</button>
                 </div>
             </div>
         <div class="content">
@@ -73,7 +73,7 @@
                 <p class="date-time">Date: 05/01/2025 <span class="date-time-gap"></span>Time: 10.25 PM</p>
                 <p class="content-items-subtitle">Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
                     with a certain degree of justification, be able to speak of humankind as civilized</p>
-                <button class="read-more-btn">Read More</button>
+                <button class="btn">Read More</button>
             </div>
                 <img class="satelite-img" src="./assets/satelite.png" alt="">
         </div>
@@ -81,8 +81,8 @@
 
     <!-- donate-today -->
     <section class="donate-today">
-        <h3 class="recent-news-title donate-alignment">Donate Today</h3>
-        <p class="recent-news-subtitle donate-alignment">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability.<br>With initiatives in renewable energy, digital transformation, and robust infrastructure.</p>
+        <h3 class="title donate-alignment">Donate Today</h3>
+        <p class="subtitle donate-alignment">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability.<br>With initiatives in renewable energy, digital transformation, and robust infrastructure.</p>
             <div class="money-section">
                 <div class="money money-background">100 Tk</div>
                 <div class="money money-background2">200 Tk</div>
@@ -91,17 +91,17 @@
             </div>
             <div class="other-amount-section">
                 <input class="other-amount" type="text" name="" id="" placeholder="Other Amount (Taka)">
-                <button class="read-more-btn btn-align">Done Now</button>
+                <button class="btn btn-align">Done Now</button>
             </div>
     </section>
     <footer class="footer">
-        <h1 class="recent-news-title donate-alignment">Subscribe Newsletter</h1>
-        <p class="recent-news-subtitle donate-alignment">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge<br>technology, promoting inclusive growth.</p>
+        <h1 class="title donate-alignment">Subscribe Newsletter</h1>
+        <p class="subtitle donate-alignment">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge<br>technology, promoting inclusive growth.</p>
         <div class="input-email">
             <input class="input-email-form" type="email" name="email" id="email" placeholder="Enter your email here">
             <button class="input-email-btn">Subscribe</button>
         </div>
-        <p class="recent-news-subtitle alignment-1">We promise not to spam you!</p>
+        <p class="subtitle alignment-1">We promise not to spam you!</p>
     </footer>
 </body>
 </html>
