--- a/index.html
+++ b/index.html
@@ -51,10 +51,17 @@
                 </div>
             </div>
         </div>
+
+        <div class="quote-section">
+            <p class="quote-section-subtitle quote-section-alignment">"Our youth and people together entrusted me and my colleagues in the Council with enormous responsibilities to re-construct a decaying State apparatus... We are particularly enthused with emergence of the Artificial Intelligence tools and applications. Our youth are excited with the prospect of fast unfolding generative AI. They aspire to walk and work as global citizens."</p>
+            <h3>Dr. Muhammad Yunus</h3>
+            <p class="quote-section-subtitle">Chief Adviser of the People's Republic of Bangladesh</p>
+        </div>
+
         <!-- recent-news -->
         <div class="recent-news">
             <h4 class="title">Recent News</h4>
-            <p class="subtitle">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
+            <p class="subtitle recent-news-subtitle">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
             <div class="content">
                 <img class="satelite-img" src="./assets/satelite.png" alt="">
                 <div class="content-items">
